@@ -66,7 +66,6 @@ S3method(attrassign, default)
 S3method(attrassign, lm)
 S3method(barplot, Surv)
 S3method(c, Surv)
-S3method(cbind, Surv)
 S3method(density, Surv)
 S3method(dim, survfit)
 S3method(dim, survfitms)
@@ -139,7 +138,6 @@ S3method(ratetableDate, Date)
 S3method(ratetableDate, date)
 S3method(ratetableDate, chron)
 S3method(ratetableDate, default)
-S3method(rbind, Surv)
 S3method(rep, Surv)
 S3method(rep.int, Surv)
 S3method(rep_len, Surv)
@@ -180,8 +178,7 @@ S3method(is.na,ratetable2)
 if(getRversion() >= "3.6.0")
     S3method(xtfrm, Surv)
 
-# Make Surv objects have their logical length.  The first try at this
-#  didn't work
+# Make Surv objects have their logical length.  
 S3method(length, Surv)
 S3method(names, Surv)
 S3method("names<-", Surv)
